--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   google_maps_flutter: ^2.5.3
   flutter_slidable: ^4.0.3
 
+  path_provider: ^2.1.2
+  share_plus: ^10.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
